// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TabList renders tabs when disabled 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="iui-TabList"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  >
    <button
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      disabled=""
      role="tab"
      type="button"
      value="1"
    >
      <span
        class="iui-Tab__content"
      >
        First
      </span>
      <span
        class="iui-Tab__content--reserved-space"
      >
        First
      </span>
    </button>
    <button
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":true}}"
      disabled=""
      role="tab"
      type="button"
      value="2"
    >
      <span
        class="iui-Tab__content"
      >
        Second
      </span>
    </button>
    <button
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      disabled=""
      role="tab"
      type="button"
      value="3"
    >
      <span
        class="iui-Tab__content"
      >
        Third
      </span>
      <span
        class="iui-Tab__content--reserved-space"
      >
        Third
      </span>
    </button>
  </div>
</div>
`;

exports[`TabList renders tabs with default selected tab 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="iui-TabList"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  >
    <button
      aria-selected="false"
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--iui-Tab__indicator--offset: 0px; --iui-Tab__indicator--scale: 1;"
      type="button"
      value="1"
    >
      <span
        class="iui-Tab__content"
      >
        First
      </span>
      <span
        class="iui-Tab__content--reserved-space"
      >
        First
      </span>
    </button>
    <button
      aria-selected="true"
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":true}}"
      role="tab"
      style="--iui-Tab__indicator--offset: 0px; --iui-Tab__indicator--scale: 1;"
      type="button"
      value="2"
    >
      <span
        class="iui-Tab__content"
      >
        Second
      </span>
    </button>
    <button
      aria-selected="false"
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--iui-Tab__indicator--offset: 0px; --iui-Tab__indicator--scale: 1;"
      type="button"
      value="3"
    >
      <span
        class="iui-Tab__content"
      >
        Third
      </span>
      <span
        class="iui-Tab__content--reserved-space"
      >
        Third
      </span>
    </button>
  </div>
</div>
`;

exports[`TabList renders with no tabs 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="iui-TabList"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  />
</div>
`;

exports[`TabList renders with tabs 1`] = `
<div>
  <div
    aria-orientation="horizontal"
    class="iui-TabList"
    data-tabster="{\\"mover\\":{\\"cyclic\\":true,\\"direction\\":2,\\"memorizeCurrent\\":false,\\"hasDefault\\":true}}"
    role="tablist"
  >
    <button
      aria-selected="false"
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--iui-Tab__indicator--offset: 0px; --iui-Tab__indicator--scale: 1;"
      type="button"
      value="1"
    >
      <span
        class="iui-Tab__content"
      >
        First
      </span>
      <span
        class="iui-Tab__content--reserved-space"
      >
        First
      </span>
    </button>
    <button
      aria-selected="false"
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--iui-Tab__indicator--offset: 0px; --iui-Tab__indicator--scale: 1;"
      type="button"
      value="2"
    >
      <span
        class="iui-Tab__content"
      >
        Second
      </span>
      <span
        class="iui-Tab__content--reserved-space"
      >
        Second
      </span>
    </button>
    <button
      aria-selected="false"
      class="iui-Tab"
      data-tabster="{\\"focusable\\":{\\"isDefault\\":false}}"
      role="tab"
      style="--iui-Tab__indicator--offset: 0px; --iui-Tab__indicator--scale: 1;"
      type="button"
      value="3"
    >
      <span
        class="iui-Tab__content"
      >
        Third
      </span>
      <span
        class="iui-Tab__content--reserved-space"
      >
        Third
      </span>
    </button>
  </div>
</div>
`;
